# coua

./: .gitignore  .gitlab-ci.yml  .nixd.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  coua.toml  default.nix  flake.nix  junit.xml  mappings.ini  pyproject.toml  requirements.toml  requirements.txt  requirements.yml  schema.ttl  spec.ttl  use-cases.toml
.config/: nextest.toml
.github/workflows/: coua.yaml  test.yml
cargo-coua/: Cargo.toml  README.md
cargo-coua/src/: main.rs
ci/: coua-cert.sh  rust-coverage.sh  rust-tests.sh
coua/: __init__.py  checks.py  cli.py  config.py  exceptions.py  input.py  sphinx.py  traces.py
coua-rust/: Cargo.toml
coua-rust/src/: main.rs
coua/mappings/: __init__.py  cobertura.ttl  junit.ttl  needy.ttl  traces.ttl
coua/ontologies/: __init__.py  ontology.py
coua/ontologies/cobertura/: __init__.py  cobertura.ttl
coua/ontologies/cobertura/ask/: all_lines_covered.rq
coua/ontologies/coua/: __init__.py  coua.ttl
coua/ontologies/coua/select/: checks.rq  not_implemented.rq  use_cases.rq
coua/ontologies/do178c/: __init__.py  do178c.ttl
coua/ontologies/do178c/ask/: ask_ucs_covered.rq  obj-5.1.1.a.rq  obj-5.2.1.a.rq  obj-6.3.1.f.rq  obj-6.3.2.f.rq  obj-6.3.4.a.rq  obj-6.3.4.e.rq  obj-A-2-1.rq  obj-A-2-4.rq  obj-A-3-6.rq  obj-A-4-6.rq  obj-A-5-1.rq  obj-A-5-5.rq  obj-a-4-6.rq
coua/ontologies/do178c/select/: applicable_objectives.rq  coverage_matrix.rq  objectives_with_independence.rq  requirements_list.rq  requires_independence.rq  software_levels.rq  (+2 more)
coua/ontologies/junit/: __init__.py  junit.ttl
coua/ontologies/mantra/: __init__.py  mantra.ttl
coua/ontologies/needy/: __init__.py  needy.ttl
coua/ontologies/traces/: __init__.py  traces.ttl
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  manifest.ttl  requirements.ttl
main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
main/coua_db/: 000033.sst  000066.sst  000067.sst  000068.sst  000069.sst  000072.sst  000078.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000029  OPTIONS-000031
mappings/: junit.ttl  mantra.ttl
nix/: checks.nix  coua-cert.nix  coua.nix  devshells.nix  jsonpath-python.nix  morph-kgc.nix  treefmt.nix
ontologies/do178c/: do178c.ttl  requirements_list.rq
resources/: manifest.ttl  requirements.ttl
spec/: manifest.ttl  requirements.ttl  use-cases.ttl
src/: artifact.rs  check.rs  cli.rs  data.rs  evidence.rs  lib.rs  main.rs  manifest.rs  objective.rs  ontology.rs  tool.rs  trace.rs
src/do178c/: mod.rs
src/requirements/: check.rs  data.rs  display.rs  input.rs  mod.rs
src/requirements/input/: data.rs  mod.rs
src/use_cases/: checks.rs  data.rs  input.rs  mod.rs
src/use_cases/input/: data.rs  mod.rs
tests/: self-check.rs  test_conv_junit.py  test_conv_needy_lsif.py  test_coua_trace.py  test_init_config.py  test_mantra.py  test_parse_cobertura.py
tests/res/: needy_lsif.json  needy_lsif_list.json  test_source_traces.json  test_source_traces.xml  tracable_python_file.py  valid_cobertura.xml  valid_junit_with_requirements.xml
use-cases/: cached-artifacts.toml  compliance-determination.toml  continuous-testing.toml  defining-certification-ontologies.toml  incremental-certification.toml  inspect-code-coverage.toml  integrate-custom-tool.toml  requirements-tracing-to-tests.toml  requirements-tracing.toml  software-configuration-management.toml
utils/: conv-cargo-coua.py  conv-requirements.py  conv-use-cases.py  import-junit.py
(+1 files in other folders)
