[package]
name = "cargo-coua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.2", features = ["derive"] }
cargo = "0.78.1"
cargo-util = "0.2.10"
serde_json = "1.0.117"
serde = "1.0.202"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
